# magic-wormhole-transit-relay-docker

./: Dockerfile  dev  docker-compose.yml  entrypoint  nginx.conf  pyproject.toml  requirements.txt
src/tx_relay/: http_2_tcp.py  tcp_2_http.py
src/tx_relay.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
test/: test_tcp_http_tunnel.py
